# rs-shell

./: Cargo.toml  README.md
examples/: basic.rs
src/: config.rs  main.rs
src/commands/cat/: Cargo.toml
src/commands/cat/src/: cat.rs  main.rs
src/rucore/: Cargo.toml
src/rucore/src/: lib.rs
