[package]
name = "rustutils"
version = "0.1.0"
edition = "2021"
description = "GNU coreutils implemented in Rust!"
readme = "README.md"
license = "MIT"
keywords = ["rust", "unix", "coreutils", "shell", "command"]

[dependencies] 
clap = { version = "3.2", features = ["wrap_help", "cargo"] }
clap_complete = "3.1"

rucore = { version = "*", package = "rucore", path = "src/rucore"}

cat = { optional=true, version="0.1.0", package="ru_cat", path="src/commands/cat" }